--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "slicemachine": "start-slicemachine",
     "import:habits": "node --loader ts-node/esm scripts/import-habits.ts",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:playwright": "playwright test"
   },
   "dependencies": {
     "@prismicio/client": "^7.17.2",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.51.1",
     "@slicemachine/adapter-next": "^0.3.74",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.0",
